[package]
name                    = "bones_asset"
description             = "Asset interface for bones_lib."
version.workspace       = true
authors.workspace       = true
edition.workspace       = true
license.workspace       = true
repository.workspace    = true
documentation.workspace = true
categories.workspace    = true
keywords.workspace      = true

[features]
default = []

# Enables debug logging of asset cid computation during loading.
cid_debug_trace = []

[dependencies]
bones_utils  = { version = "0.4.0", path = "../bones_utils", features = ["serde"] }
bones_schema = { version = "0.4.0", path = "../bones_schema", features = ["serde"] }

anyhow          = "1.0"
append-only-vec = "0.1.3"
async-channel   = "1.9"
bevy_tasks      = "0.11"
bs58            = "0.5"
dashmap         = "5.5"
ehttp           = "0.3"
elsa            = "1.9"
erased-serde    = "0.4"
event-listener  = "4.0"
futures-lite    = { workspace = true }
once_cell       = "1.18"
parking_lot     = { workspace = true }
paste           = "1.0"
path-absolutize = { version = "3.1", features = ["use_unix_paths_on_wasm"] }
semver          = { version = "1.0", features = ["serde"] }
serde           = { version = "1.0", features = ["derive"] }
serde_json      = "1.0"
serde_yaml      = "0.9"
sha2            = "0.10"
tracing         = "0.1"
ulid            = "1.0"
ustr            = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
notify = "6.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
bones_schema = { version = "0.4", path = "../bones_schema", features = ["glam"] }
glam         = "0.24"
bevy_tasks   = "0.11"
