[package]
name                    = "bones_ecs"
description             = "A simple and flexible Entity Component System."
version.workspace       = true
authors.workspace       = true
edition.workspace       = true
license.workspace       = true
repository.workspace    = true
documentation.workspace = true
categories.workspace    = true
keywords.workspace      = true

[features]
default = ["keysize16"]
glam    = ["dep:glam", "dep:paste", "bones_schema/glam"]

keysize16 = []
keysize20 = []
keysize24 = []
keysize32 = []

[dependencies]
bones_utils  = { version = "0.3", path = "../bones_utils" }
bones_schema = { version = "0.3", path = "../bones_schema" }

anyhow      = "1.0"
atomicell   = "0.2"
bitset-core = "0.1"
thiserror   = "1.0"
glam        = { version = "0.24", optional = true }
paste       = { version = "1.0", optional = true }
once_map = "0.4.12"

[dev-dependencies]
glam = "0.24"
