[package]
name                    = "bones_ecs"
description             = "A simple and flexible Entity Component System."
version.workspace       = true
authors.workspace       = true
edition.workspace       = true
license.workspace       = true
repository.workspace    = true
documentation.workspace = true
categories.workspace    = true
keywords.workspace      = true

[features]
default = ["derive", "keysize16"]
miri    = ["derive", "keysize10"]
derive  = ["dep:bones_ecs_macros"]
glam    = ["dep:glam", "dep:paste", "bones_schema/glam"]
serde   = ["dep:serde"]

keysize10 = []
keysize12 = []
keysize16 = []
keysize20 = []
keysize24 = []
keysize32 = []

[dependencies]
bones_utils  = { version = "0.4.0", path = "../bones_utils" }
bones_schema = { version = "0.4.0", path = "../bones_schema" }

# Optional deps
bones_ecs_macros = { version = "0.4.0", path = "./macros", optional = true }
glam             = { version = "0.24", optional = true }
paste            = { version = "1.0", optional = true }
serde            = { version = "1", features = ["derive"], optional = true }

anyhow      = "1.0"
branches    = { workspace = true }
atomicell   = "0.2"
bitset-core = "0.1"
once_map    = "0.4.12"
thiserror   = "1.0"

[dev-dependencies]
glam = "0.24"
