[package]
name                    = "bones_framework"
description             = "The Bones game development framework."
version.workspace       = true
authors.workspace       = true
edition.workspace       = true
license.workspace       = true
repository.workspace    = true
documentation.workspace = true
categories.workspace    = true
keywords.workspace      = true

[features]
default = ["image_png", "ui", "localization", "audio", "audio_ogg", "scripting"]
#! Cargo feature supported in `bones_framework`.

## Enable the `ui` module, powered by [`egui`].
ui = ["dep:egui", "dep:ttf-parser"]
## Enable the localization module, powered by [`fluent`](https://github.com/projectfluent/fluent-rs).
localization = ["dep:fluent", "dep:fluent-langneg", "dep:intl-memoizer", "dep:unic-langid", "dep:sys-locale"]

## Enable the audio system.
audio = ["dep:kira"]

## Enable the scripting system.
scripting = ["dep:bones_scripting"]

#! ### Audio formats
#! These features enable different audio formats

## Enable OGG audio loader.
audio_ogg = ["kira/ogg"]

## Enable MP3 audio loader.
audio_mp3 = ["kira/mp3"]

## Enable the FLAC audio loader.
audio_flac = ["kira/flac"]

## Enable the WAV audio loader.
audio_wav = ["kira/wav"]

#! ### Image Formats
#! These features enable different image formats.
#!
#! If there is an image format that you need that is not in the list, you may check the
#! [supported formats](https://github.com/image-rs/image#supported-image-formats) list.
#! If the format you need is in the list, please open an issue and we can add a feature
#! for it.

## Enable PNG image loader.
image_png = ["image/png"]
## Enable JPEG image loader.
image_jpeg = ["image/jpeg"]
## Enable WEBP image loader.
image_webp = ["image/webp"]
## Enable TIFF image loader.
image_tiff = ["image/tiff"]
## Enable GIF image loader.
image_gif = ["image/gif"]
## Enable ICO image loader.
image_ico = ["image/ico"]
## Enable BMP image loader.
image_bmp = ["image/bmp"]

document-features = ["dep:document-features"]

[dependencies]
# Bones
bones_lib       = { version = "0.3", path = "../bones_lib", features = ["glam"] }
bones_asset     = { version = "0.3", path = "../bones_asset" }
bones_schema    = { version = "0.3", path = "../bones_schema", features = ["humantime"] }
bones_scripting = { version = "0.3", path = "../bones_scripting", optional = true }

# Other
anyhow        = "1.0"
async-channel = "1.7"
bevy_tasks    = { version = "0.11" }
bytemuck      = "1.12"
either        = "1.8"
futures-lite  = "1.12"
glam          = "0.24"
hex           = "0.4"
instant       = { version = "0.1", features = ["wasm-bindgen"] }
noise         = "0.8"
once_cell     = "1.17"
thiserror     = "1.0"
tracing       = "0.1"

# Render
csscolorparser = "0.6"

# Assets
serde_yaml = "0.9"
serde      = { version = "1.0", features = ["derive"] }

# Sprite
image = { version = "0.24", default-features = false }

# Gui
egui       = { version = "0.23", optional = true }
ttf-parser = { version = "0.20", default-features = false, optional = true }

# Audio
kira = { version = "0.8.6", features = ["cpal"], default-features = false, optional = true }

# Localization
fluent         = { version = "0.15", optional = true }
fluent-langneg = { version = "0.13", optional = true }
intl-memoizer  = { version = "0.5", optional = true }
unic-langid    = { version = "0.9", features = ["serde"], optional = true }
sys-locale     = { version = "0.3", optional = true }

# API docs
document-features = { version = "0.2", optional = true }

# Networking
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ggrs                   = { version = "0.9", features = ["sync-send"] }
bones_matchmaker_proto = { version = "0.2", path = "../../other_crates/bones_matchmaker_proto" }
bytes                  = "1.4"
mdns-sd                = { version = "0.7", default-features = false }
numquant               = "0.2"
ping-rs                = "0.1"
postcard               = { version = "1.0", features = ["alloc"] }
rcgen                  = "0.12"
rustls                 = { version = "0.21", features = ["dangerous_configuration", "quic"] }
smallvec               = "1.10"
quinn                  = { version = "0.10", default-features = false, features = ["native-certs", "tls-rustls"] }
quinn_runtime_bevy     = { version = "0.3", path = "../../other_crates/quinn_runtime_bevy" }
