[package]
name                    = "bones_networking"
description             = "bones_framework networking integration."
version.workspace       = true
authors.workspace       = true
edition.workspace       = true
license.workspace       = true
repository.workspace    = true
documentation.workspace = true
categories.workspace    = true
keywords.workspace      = true

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
rcgen  = "0.12"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
quinn  = { version = "0.10", default-features = false, features = ["tls-rustls"] }
rustls = { version = "0.21", features = ["dangerous_configuration", "quic"] }
